<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".HomeActivity"
    tools:showIn="@layout/activity_home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/Vstup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/large_text"
            android:textColor="@color/white"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Zmist"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/btn_1"
            style="@style/main_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/Pochatok"
            android:textSize="16sp" />

        <ua.pl.pokrova.ui.NonScrollExpandableListView
            android:id="@+id/expandableListView"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:groupIndicator="@drawable/indicator"
            android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
            android:divider="@android:color/darker_gray"
            android:dividerHeight="0.5dp"/>

        <Button
            android:id="@+id/btn_3"
            style="@style/main_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/End"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_4"
            style="@style/main_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/Soul"
            android:textSize="16sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/icon_calligraphy_image"
                android:src="@drawable/icon_calligraphy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintWidth_percent="0.7" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>