<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".HomeActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            style="@style/Recycler_fon"
            app:contentScrim="@color/black"
            app:expandedTitleMarginEnd="24dp"
            app:expandedTitleMarginStart="24dp"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/backdrop_constraint_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7">

                <TextView
                    android:id="@+id/Mol_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/Psaltyr"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/icon_david_image"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constrainedWidth="true" />

                <TextView
                    android:id="@+id/David_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/David"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@id/Mol_text"
                    app:layout_constraintStart_toStartOf="@id/Mol_text"
                    app:layout_constraintEnd_toEndOf="@id/Mol_text"
                    app:layout_constrainedWidth="true" />

                <TextView
                    android:id="@+id/UPC_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/UPC"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    app:layout_constraintTop_toBottomOf="@id/David_text"
                    app:layout_constraintStart_toStartOf="@id/Mol_text"
                    app:layout_constraintEnd_toEndOf="@id/Mol_text"
                    app:layout_constrainedWidth="true" />

                <ImageView
                    android:id="@+id/icon_david_image"
                    android:src="@drawable/icon_david"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias="0.5"
                    app:layout_constraintWidth_percent="0.35" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ToolbarOverflowTheme"
                app:theme="@style/ToolbarOverflowTheme"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_scrolling" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>